--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT="8081"
+MONGODB_URL="mongodb+srv://pradytpk:oi30Rkm8HzW00ddq@cluster0.yqa7hre.mongodb.net/?retryWrites=true&w=majority&appName=product"
